--- a/app/src/main/res/layout/activity_lyrics.xml
+++ b/app/src/main/res/layout/activity_lyrics.xml
@@ -25,7 +25,9 @@
             android:layout_marginBottom="2dp"
             android:layout_marginTop="2dp"
             ads:adSize="BANNER"
-            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
+            ads:adUnitId="ca-app-pub-7987343674758455/9539443013">
+
+       </com.google.android.gms.ads.AdView>
 
 
 
@@ -126,7 +128,9 @@
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp"
                     ads:adSize="BANNER"
-                    ads:adUnitId="ca-app-pub-7987343674758455/8042781135"></com.google.android.gms.ads.AdView>
+                    ads:adUnitId="ca-app-pub-7987343674758455/8042781135">
+
+                </com.google.android.gms.ads.AdView>
             </android.support.v7.widget.CardView>
 
 
