--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -5,9 +5,11 @@
     tools:context="in.beyonitysoftwares.besttamilsongs.fragments.FavouritesFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/favSongsrv"
+        android:layout_marginTop="7dp"
+        android:layout_below="@id/filterlayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="favorite" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
