--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,142 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="in.beyonitysoftwares.besttamilsongs.Activities.MainActivity">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/PlayButton"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:scaleType="center"
+            android:clickable="true"
+            app:backgroundTint="@color/pocket_color_2"
+            app:elevation="10dp"
+            app:fabSize="normal"
+            app:srcCompat="@drawable/play" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/SkipNext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="58dp"
+            android:layout_marginRight="58dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            app:backgroundTint="@color/pocket_color_1"
+            app:elevation="10dp"
+            app:fabSize="mini"
+            app:srcCompat="@drawable/next" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/SkipPrev"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="100dp"
+            android:layout_marginRight="100dp"
+            android:clickable="true"
+            app:backgroundTint="@color/pocket_color_1"
+            app:elevation="10dp"
+            app:fabSize="mini"
+            app:srcCompat="@drawable/back" />
+
+        <LinearLayout
+            android:id="@+id/bottomlayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="bottom"
+            android:orientation="vertical">
+
+
+
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:background="@drawable/gradient"
+                android:orientation="horizontal">
+
+
+                <ImageButton
+                    android:id="@+id/ButtonPlaylist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginStart="5dp"
+                    android:background="@android:color/transparent"
+                    app:srcCompat="@drawable/playlist_play" />
+
+                <SeekBar
+                    android:id="@+id/seekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="145dp"
+                    android:layout_marginRight="145dp"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+        <in.beyonitysoftwares.besttamilsongs.customViews.CustomViewPager
+            android:layout_width="match_parent"
+            android:layout_below="@+id/navigation"
+            android:layout_above="@+id/bottomlayout"
+            android:layout_height="match_parent"
+            android:id="@+id/mainVG">
+
+        </in.beyonitysoftwares.besttamilsongs.customViews.CustomViewPager>
+
+
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:background="?android:attr/windowBackground"
+            app:menu="@menu/navigation" />
+
+    </RelativeLayout>
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:headerLayout="@layout/nav_header_song"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_song">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -35,144 +164,5 @@
 
     </android.support.design.widget.NavigationView>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="in.beyonitysoftwares.besttamilsongs.Activities.MainActivity">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/PlayButton"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:scaleType="center"
-        android:clickable="true"
-        app:backgroundTint="@color/pocket_color_2"
-        app:elevation="10dp"
-        app:fabSize="normal"
-        app:srcCompat="@drawable/play" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/SkipNext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="58dp"
-        android:layout_marginRight="58dp"
-        android:layout_weight="1"
-        android:clickable="true"
-        app:backgroundTint="@color/pocket_color_1"
-        app:elevation="10dp"
-        app:fabSize="mini"
-        app:srcCompat="@drawable/next" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/SkipPrev"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginRight="100dp"
-        android:clickable="true"
-        app:backgroundTint="@color/pocket_color_1"
-        app:elevation="10dp"
-        app:fabSize="mini"
-        app:srcCompat="@drawable/back" />
-
-    <LinearLayout
-        android:id="@+id/bottomlayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_gravity="bottom"
-        android:orientation="vertical">
-
-
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
-            android:background="@drawable/gradient"
-            android:orientation="horizontal">
-
-
-            <ImageButton
-                android:id="@+id/ButtonPlaylist"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginEnd="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginStart="5dp"
-                android:background="@android:color/transparent"
-                app:srcCompat="@drawable/playlist_play" />
-
-            <SeekBar
-                android:id="@+id/seekBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginEnd="145dp"
-                android:layout_marginRight="145dp"
-                android:layout_weight="1" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-
-            <in.beyonitysoftwares.besttamilsongs.customViews.SmoothProgressBar
-                android:id="@+id/google_now"
-                style="@style/GNowProgressBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_gravity="bottom"
-                android:background="@android:color/transparent"
-                android:indeterminate="true"
-                app:spb_speed="2"
-                app:spb_stroke_width="2dp" />
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-    <in.beyonitysoftwares.besttamilsongs.customViews.CustomViewPager
-        android:layout_width="match_parent"
-        android:layout_below="@+id/navigation"
-        android:layout_above="@+id/bottomlayout"
-        android:layout_height="match_parent"
-        android:id="@+id/mainVG">
-
-    </in.beyonitysoftwares.besttamilsongs.customViews.CustomViewPager>
-
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:background="?android:attr/windowBackground"
-        app:menu="@menu/navigation" />
-
-</RelativeLayout>
 </android.support.v4.widget.DrawerLayout>
