--- a/app/src/main/res/layout/play_list_view.xml
+++ b/app/src/main/res/layout/play_list_view.xml
@@ -39,7 +39,7 @@
     </LinearLayout>
 
     <ImageButton
-        android:id="@+id/context"
+        android:id="@+id/remove"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginEnd="5dp"
@@ -48,7 +48,7 @@
         android:layout_marginStart="5dp"
         android:background="@android:color/transparent"
         android:clickable="true"
-        android:src="@drawable/ic_more_vert_black_24dp" />
+        android:src="@drawable/remove" />
     <ImageButton
         android:id="@+id/fav"
         android:layout_width="wrap_content"
