--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -16,11 +16,11 @@
         layout="@layout/song_request"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <include
+    <!--<include
         layout="@layout/theme_selector"
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" />-->
 
     <include
         layout="@layout/profile"
