--- a/app/src/main/res/layout/activity_lyrics.xml
+++ b/app/src/main/res/layout/activity_lyrics.xml
@@ -99,10 +99,20 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
+                            android:layout_marginBottom="5dp"
+                            android:layout_marginEnd="15dp"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginRight="15dp"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginTop="5dp"
                             android:layout_weight="1"
+                            android:elevation="10dp"
                             android:fontFamily="@font/convergence"
+                            android:lineSpacingMultiplier="1.2"
                             android:text="@string/lyrics"
                             android:textAlignment="center"
+                            android:textColor="@color/md_cyan_900"
+                            android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -189,10 +199,20 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
+                            android:layout_marginBottom="5dp"
+                            android:layout_marginEnd="15dp"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginRight="15dp"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginTop="5dp"
                             android:layout_weight="1"
+                            android:elevation="10dp"
                             android:fontFamily="@font/convergence"
+                            android:lineSpacingMultiplier="1.2"
                             android:text="@string/lyrics"
                             android:textAlignment="center"
+                            android:textColor="@color/md_cyan_900"
+                            android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
 
