--- a/app/src/main/res/layout/activity_lyrics_eng.xml
+++ b/app/src/main/res/layout/activity_lyrics_eng.xml
@@ -97,10 +97,20 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
+                            android:layout_marginBottom="5dp"
+                            android:layout_marginEnd="15dp"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginRight="15dp"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginTop="5dp"
                             android:layout_weight="1"
+                            android:elevation="10dp"
                             android:fontFamily="@font/convergence"
+                            android:lineSpacingMultiplier="1.2"
                             android:text="@string/lyrics"
                             android:textAlignment="center"
+                            android:textColor="@color/md_blue_900"
+                            android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -126,7 +136,9 @@
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp"
                     ads:adSize="BANNER"
-                    ads:adUnitId="ca-app-pub-7987343674758455/6346556088"></com.google.android.gms.ads.AdView>
+                    ads:adUnitId="ca-app-pub-7987343674758455/6346556088">
+
+                </com.google.android.gms.ads.AdView>
 
             </android.support.v7.widget.CardView>
 
@@ -185,10 +197,20 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
+                            android:layout_marginBottom="5dp"
+                            android:layout_marginEnd="15dp"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginRight="15dp"
+                            android:layout_marginStart="15dp"
+                            android:layout_marginTop="5dp"
                             android:layout_weight="1"
+                            android:elevation="10dp"
                             android:fontFamily="@font/convergence"
+                            android:lineSpacingMultiplier="1.2"
                             android:text="@string/lyrics"
                             android:textAlignment="center"
+                            android:textColor="@color/md_blue_900"
+                            android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
 
