--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -20,7 +20,7 @@
         android:id="@+id/filterlayout"
         layout="@layout/filter"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true">
 
 
