--- a/app/src/main/res/layout/song_request.xml
+++ b/app/src/main/res/layout/song_request.xml
@@ -39,7 +39,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/inputAlbum"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -51,7 +51,8 @@
             android:padding="3dp"
             android:textColor="@color/md_blue_600" />
 
-        <!--   <TextView
+
+     <TextView
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -62,7 +63,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/inputSong"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -72,10 +73,10 @@
             android:fontFamily="@font/convergence"
             android:inputType="textCapSentences"
             android:padding="3dp"
-            android:textColor="@color/md_blue_600"/>-->
+            android:textColor="@color/md_blue_600"/>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/submit"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_gravity="center"
