--- a/app/src/main/res/layout/filter.xml
+++ b/app/src/main/res/layout/filter.xml
@@ -18,8 +18,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            
             android:layout_weight="1"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+             />
 
         <Spinner
             android:id="@+id/HeroSpinner"
