--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="eighty_percent_black_overlay">#80000000</color>
     <color name="app_shortcut_default_foreground">#607d8b</color>
     <color name="app_shortcut_default_background">#f5f5f5</color>
-    <color name="grey_300">#E0E0E0</color>
+    <color name="grey_300">#e0e0e0</color>
     <color name="white">#FFFFFF</color>
     <color name="teal_800">#00695C</color>
     <color name="amber_800">#ff8f00</color>
