--- a/app/src/main/res/layout/language_select.xml
+++ b/app/src/main/res/layout/language_select.xml
@@ -23,11 +23,11 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:fontFamily="@font/convergence"
             android:layout_weight="1"
+            android:fontFamily="@font/convergence"
             android:text="தமிழ்"
             android:textColor="@color/teal_800"
-            android:textColorHighlight="@color/amber_800"
+            android:textColorHighlight="#FF0576B4"
             android:textSize="14sp"
             android:textStyle="bold" />
 
@@ -41,7 +41,7 @@
 
             android:text="English"
             android:textColor="@color/teal_800"
-            android:textColorHighlight="@color/amber_800"
+            android:textColorHighlight="#FF0576B4"
             android:textSize="14sp"
             android:textStyle="bold" />
 
