--- a/app/src/main/res/layout/activity_lyrics_eng.xml
+++ b/app/src/main/res/layout/activity_lyrics_eng.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
 
-    <android.support.v7.widget.CardView
+ -   <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="2dp"
@@ -25,7 +25,8 @@
             android:layout_marginBottom="2dp"
             android:layout_marginTop="2dp"
             ads:adSize="BANNER"
-            ads:adUnitId="ca-app-pub-7987343674758455/7851209441"></com.google.android.gms.ads.AdView>
+            ads:adUnitId="ca-app-pub-7987343674758455/7851209441">
+            </com.google.android.gms.ads.AdView>
 
     </android.support.v7.widget.CardView>
 
@@ -109,7 +110,7 @@
                             android:lineSpacingMultiplier="1.2"
                             android:text="@string/lyrics"
                             android:textAlignment="center"
-                            android:textColor="@color/md_blue_900"
+                            android:textColor="@color/md_blue_grey_700"
                             android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -209,7 +210,7 @@
                             android:lineSpacingMultiplier="1.2"
                             android:text="@string/lyrics"
                             android:textAlignment="center"
-                            android:textColor="@color/md_blue_900"
+                            android:textColor="@color/md_blue_grey_700"
                             android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
