--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,8 +1,9 @@
-
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fontFamily="@font/convergence"
+    android:textAlignment="center"
     android:textColor="@color/grey_300"
-    android:textSize="12sp" />
+    android:textSize="16sp"
+    android:textStyle="bold" />
