--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -384,7 +384,7 @@
     <color name="md_blue_grey_400">#78909C</color>
     <color name="md_blue_grey_500">#607D8B</color>
     <color name="md_blue_grey_600">#546E7A</color>
-    <color name="md_blue_grey_700">#455A64</color>
+    <color name="md_blue_grey_700">#455a64</color>
     <color name="md_blue_grey_800">#37474F</color>
     <color name="md_blue_grey_900">#263238</color>
 
