--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,13 +74,12 @@
             android:orientation="vertical">
 
 
-
-
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
 
+                android:layout_marginBottom="15dp"
                 android:background="@drawable/gradient"
                 android:orientation="horizontal">
 
@@ -179,15 +178,20 @@
                 android:layout_above="@+id/clearall">
 
             </android.support.v7.widget.RecyclerView>
+
             <Button
+                android:id="@+id/clearall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/clearall"
-                android:onClick="clearPlayList"
                 android:layout_alignParentBottom="true"
-                android:text="Clear All"
+                android:background="@drawable/gradient3"
                 android:clickable="true"
-                />
+                android:fontFamily="@font/convergence"
+                android:onClick="clearPlayList"
+                android:text="Clear All"
+                android:textColor="@color/md_white_1000"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
         </RelativeLayout>
 
