--- a/app/src/main/res/layout/song_request.xml
+++ b/app/src/main/res/layout/song_request.xml
@@ -24,7 +24,7 @@
             android:text="@string/song_req"
             android:textAlignment="center"
             android:textColor="@color/md_white_1000"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:typeface="serif" />
 
@@ -36,6 +36,7 @@
             android:fontFamily="@font/convergence"
             android:text="@string/album"
             android:textColor="@color/md_white_1000"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <EditText
@@ -49,10 +50,11 @@
             android:fontFamily="@font/convergence"
             android:inputType="textCapSentences"
             android:padding="3dp"
-            android:textColor="@color/md_blue_600" />
+            android:textColor="@color/md_blue_600"
+            android:textSize="16sp" />
 
 
-     <TextView
+        <TextView
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -60,6 +62,7 @@
             android:fontFamily="@font/convergence"
             android:text="@string/song_req"
             android:textColor="@color/md_white_1000"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <EditText
@@ -73,24 +76,26 @@
             android:fontFamily="@font/convergence"
             android:inputType="textCapSentences"
             android:padding="3dp"
-            android:textColor="@color/md_blue_600"/>
+            android:textColor="@color/md_blue_600"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/submit"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="25dp"
             android:layout_gravity="center"
             android:layout_marginEnd="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginStart="5dp"
             android:layout_weight="1"
-            android:background="@color/md_green_700"
+            android:background="@drawable/gradient"
             android:elevation="5dp"
             android:fontFamily="@font/convergence"
             android:text="@string/submit"
             android:textColor="@color/md_white_1000"
-            android:textSize="18sp" />
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
