--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
             android:layout_alignParentRight="true"
             android:scaleType="center"
             android:clickable="true"
+            android:layout_marginBottom="25dp"
             app:backgroundTint="@color/pocket_color_2"
             app:elevation="10dp"
             app:fabSize="normal"
@@ -36,7 +37,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="33dp"
             android:layout_marginEnd="58dp"
             android:layout_marginRight="58dp"
             android:layout_weight="1"
@@ -53,7 +54,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="33dp"
             android:layout_marginEnd="100dp"
             android:layout_marginRight="100dp"
             android:clickable="true"
@@ -69,6 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
+            android:layout_marginBottom="25dp"
             android:layout_alignParentStart="true"
             android:layout_gravity="bottom"
             android:orientation="vertical">
@@ -107,14 +109,7 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
-
-
-            </LinearLayout>
 
 
         </LinearLayout>
@@ -127,22 +122,6 @@
             android:id="@+id/mainVG">
 
         </in.beyonitysoftwares.besttamilsongs.customViews.CustomViewPager>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/songdetails"
-
-            android:layout_toStartOf="@+id/SkipPrev"
-            android:fontFamily="@font/convergence"
-            android:shadowColor="#000"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="50"
-            android:textColor="#FBFBFB"
-
-            android:textStyle="bold"
-            android:paddingStart="20dp"
-            android:layout_above="@id/bottomlayout"/>
 
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
@@ -151,6 +130,56 @@
 
             android:background="?android:attr/windowBackground"
             app:menu="@menu/navigation" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true">
+
+        </LinearLayout>
+        <TextView
+            android:id="@+id/currentTime"
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
+            android:fontFamily="@font/convergence"
+            android:text="00:00" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/songdetails"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:fontFamily="@font/convergence"
+            android:shadowColor="#000"
+            android:layout_marginStart="45dp"
+            android:shadowDx="0"
+            android:layout_marginEnd="45dp"
+            android:shadowDy="0"
+            android:shadowRadius="50"
+            android:textColor="#FBFBFB"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="5dp"
+
+
+            android:id="@+id/totalTime"
+            android:text="00:00"
+            android:layout_gravity="end"
+            android:gravity="end"
+
+            android:fontFamily="@font/convergence"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginRight="5dp"
+            android:layout_alignParentRight="true" />
 
     </RelativeLayout>
    <android.support.design.widget.NavigationView
